--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-flag-icon-css": "^1.0.25",
+    "react-ga": "^2.7.0",
     "react-helmet": "^5.2.1",
     "react-scripts": "3.4.1"
   },
