--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-flag-icon-css": "^1.0.25",
     "react-ga": "^2.7.0",
     "react-helmet": "^5.2.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-select": "^3.1.0",
+    "react-share": "^4.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
