--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-ga": "^2.7.0",
     "react-helmet": "^5.2.1",
     "react-scripts": "3.4.1",
+    "react-scroll": "^1.7.16",
+    "react-scroll-up-button": "^1.6.4",
     "react-select": "^3.1.0",
     "react-share": "^4.1.0"
   },
